fix for images in comments copy pasted with hiding classes
Images were escaping and blocking other elements on the page.
This happened if you copy pasted an image from a fotorama box, which hides them by default and uses absolute positioning -> they moved up to the top over buttons, but were invisible while still blocking mouse interaction.

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -969,6 +969,8 @@ input[type="submit"]:active,
 }
 
 .comment .body img, table.latestcomments img  {
+	position: static; /* fix for images copy pasted with hiding classes */
+	opacity: initial; /* fix for images copy pasted with hiding classes */
 	max-width: 100%;
 }
 
@@ -981,6 +983,7 @@ p:last-child {
 }
 
 .editbox.comment {
+	position: relative; /* fix for escaping elements covering other parts of the site */
 	padding: 0px;
 	background: rgba(219, 208, 182, 0.7);
 }
